--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Repasando fundamentos de HTML con el curso de @jonmircha en youtube" />
+    <!-- esta metaetiqueta me permite cambiar el color de la barra de navegacion en mobile -->
+    <meta name="theme-color" content="#4285f4">
     <title>Fundamentos HTML</title>
     <!-- para el icono de la pag debe ser .png  -->
     <link rel="icon" type="image/png" href="./media/html.png" />
     <!-- apple-touch-icon es para el favicon en mobile -->
     <link rel="apple-touch-icon" href="./media/html.png">
-    <!-- esta metaetiqueta me permite cambiar el color de la barra de navegacion en mobile -->
-    <meta name="theme-color" content="#FF6600">
 
     <!-- metaetiquetas para crear las cartas que aparecen cuando compartimos links en redes sociales -->
     <meta property="og:title" content="Repasando HTML">
